New Changes to the site text.

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,12 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera</h1>
+<h1>Hello Coursera! Wassup?</h1>
+<h1> 27/12/2021</h1>
+<p>Hello, this is the first stage of learning where I learnt to use git to edit code and take it to the online github and make it into a website</p>
+<p>I have also learnt what HTML is used for as well as CSS and Javascript. Thos 3 coding languages are used together to build the website page and shape it.</p>
+<p>In this page the only language used is HTML and it's use is to give the website it's shape and text and stuff like that...</p>
+<p>Okay so I will stop adding to this website until I learn something new to try :)</p>
+<h1>29/12/2021</h1>
 </body>
 </html>
