--- a/site/index.html
+++ b/site/index.html
@@ -13,5 +13,8 @@
 <p>In this page the only language used is HTML and it's use is to give the website it's shape and text and stuff like that...</p>
 <p>Okay so I will stop adding to this website until I learn something new to try :)</p>
 <h1>29/12/2021</h1>
+<p>
+	Link to an anime website I created for training: <a href="AnimeList.html">Anime Website</a>
+</p>
 </body>
 </html>
