--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,27 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello Coursera</title>
+	<style>
+a:link, a:visited {
+	font-size: 40px;
+	text-decoration: none;
+	background-color: Orange;
+	color: steelblue;
+	border: 1px black;
+	display: block;
+	width: 300px;
+	height: 50px;
+	text-align: center;
+	margin-left: 500px;
+}
+a:hover {
+	background-color: yellow;
+}
+a:active {
+	background-color:  greenyellow;
+}
+</style>
+
 </head>
 <body>
 <h1>Hello Coursera! Wassup?</h1>
@@ -14,7 +35,8 @@
 <p>Okay so I will stop adding to this website until I learn something new to try :)</p>
 <h1>29/12/2021</h1>
 <p>
-	Link to an anime website I created for training: <a href="AnimeList.html">Anime Website</a>
+	Link to an anime website I created for training: 
+	<a href="AnimeList.html">Anime Website</a>
 </p>
 </body>
 </html>
